[metadata]
name = libmelee-gym
version = 0.1.0
description = Custom Gym Environment for Melee

[options]
python_requires = >=3.9
install_requires =
   gym>=0.18.0
   melee>=0.30.0
   tensorflow-gpu==2.6.0
   tensorflow-probability==0.14.0
   protobuf<=3.20

[options.extras_require]
test =
   pytest>=6.0
   pytest-cov>=2.10
reward =
   Naked

[options.packages.find]
where = libmeleegym

[tool:pytest]
addopts = --cov=libmeleegym --cov-report=xml:test_results/results.xml
testpaths = tests

[coverage:run]
branch = True
source = libmeleegym

[coverage:report]
fail_under = 90
show_missing = True